# nusa-panel

./: .gitignore  README.md  nginx_config.tmp
backend/: .env.example  .gitignore  Cargo.toml  Rocket.toml  build_error.txt  build_error_2.txt  build_error_3.txt  install.sh  log2.txt  log3.txt
backend/migrations/: 001_complete_schema_fixed.sql  002_fix_redis_table.sql  003_add_domain_features.sql  004_add_password_encrypted.sql  005_add_packages.sql  006_add_app_installations.sql  007_add_user_php_version.sql  008_fix_users_timestamps.sql  009_security_center.sql  010_modsecurity_custom_rules_audit_logs.sql  011_add_modsecurity_audit_user.sql  012_add_ddns_hosts.sql
backend/src/: lib.rs  main.rs  pasword_hash.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/errors/: mod.rs
backend/src/guards/: auth_guard.rs  mod.rs  request_info.rs
backend/src/models/: app_installer.rs  domain.rs  email.rs  file.rs  ftp.rs  managed_db.rs  mod.rs  package.rs  phpmyadmin_signon.rs  redis.rs  security.rs  system.rs  user.rs  vuefinder.rs  web_server.rs
backend/src/routes/: apps.rs  auth.rs  databases.rs  domains.rs  emails.rs  files.rs  ftp.rs  health.rs  mod.rs  nodejs.rs  packages.rs  phpmyadmin.rs  redis.rs  security.rs  system.rs  users.rs  vuefinder.rs  web_server.rs
backend/src/services/: app_installer_service.rs  auth_service.rs  database_service.rs  domain_service.rs  email_service.rs  file_service.rs  ftp_service.rs  mod.rs  nodejs_service.rs  package_service.rs  php_pool_service.rs  phpmyadmin_signon_service.rs  redis_service.rs  (+10 more)
(+136 files in other folders)
