[package]
name = "nusa-panel"
version = "0.1.0"
edition = "2021"
authors = ["NusaPanel Team"]
description = "Web Hosting Control Panel API - Similar to cPanel"
license = "MIT"
repository = ""

[dependencies]
# Web Framework
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_cors = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.0"
argon2 = "0.5"
rand = "0.8"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Date/Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenv = "0.15"

# Utilities
async-trait = "0.1"
thiserror = "1.0"
once_cell = "1.18"
regex = "1.10"
base64 = "0.22"
sysinfo = "0.37.2"
zip = "2.2"
walkdir = "2.5"

# Security - Rate Limiting (optional untuk production)
# governor = "0.6"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
